changes for java8